--- a/main.html
+++ b/main.html
@@ -1,9 +1,7 @@
 <html>
-    <head> Korok Hunt </head>
+    <head> <b>Korok Hunt</b> </head>
     <body>
-        \nFind Koroks littered across RPI!
-        \nFind the most Koroks to win 20 dollars!
-        \nTop three players win prizes
+        Find Koroks littered across RPI!
 
     </body>
 </html>
