--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head> <b>Korok Hunt</b> </head>
     <body>
         Find Koroks littered across RPI!
+        <img src="korok_hunt_logo.svg" alt="Korok Hunt Logo">
 
     </body>
 </html>
