--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </div>
     
 
-        <script type="module" src="js/main.js"></script>
+        <script type="module" src="./main.js"></script>
 </body>
 </html>
 
