Made site look better

--- a/korok_hunt/leaderboard/index.html
+++ b/korok_hunt/leaderboard/index.html
@@ -14,7 +14,7 @@
         <div class="top_container">
             <div class="logo_container">
                 <a href="https://joshschnauber.com/korok_hunt/">
-                <img src="/korok_hunt/img/korok_hunt_logo.png" alt="Korok Hunt Logo">
+                <img src="/korok_hunt/img/korok_hunt_logo.svg" alt="Korok Hunt Logo">
                 </a>
             </div>
 
