--- a/korok_hunt/index.html
+++ b/korok_hunt/index.html
@@ -14,7 +14,7 @@
         <div class="top_container">
             <div class="logo_container">
                 <a href="https://joshschnauber.com/korok_hunt/">
-                <img src="/korok_hunt/img/korok_hunt_logo.svg" alt="Korok Hunt Logo">
+                <img src="/korok_hunt/img/korok_hunt_logo.png" alt="Korok Hunt Logo">
                 </a>
             </div>
 
@@ -43,7 +43,7 @@
         
         <div id="leaderboard_button" class="leaderboard_button">
             <a href="https://joshschnauber.com/korok_hunt/leaderboard/" class="center">
-            <img src="/korok_hunt/img/leaderboard_button.svg" alt="View leaderboard">
+            <img src="/korok_hunt/img/leaderboard_button.png" alt="View leaderboard">
             </a>
         </div>
         <br><br><br><br>
