Hopefully fixed Safari UI

--- a/korok_hunt/index.html
+++ b/korok_hunt/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+<meta name="theme-color" content="#E28C3F"/>
+
 <html id="html" lang="en">
 <head>
     <title> RPI Korok Hunt </title>
@@ -126,15 +128,13 @@
             <div class="input_popup_text">
                 This email will only be used to contact you if you win.
             </div>
-            <br>
-            <br>
 
-            <div class="center">
+            <div class="top_text_padding center">
                 <x class="input_popup_text input_text_area_label">Username &nbsp</x>
                 <textarea id="username_input" class="input_text_area" rows="1" cols="14" maxlength="32"></textarea>
             </div>
             <div class="input_popup_text">
-                This username will be displayed on the leaderbord.<br>
+                This username will be displayed on the leaderbord.
             </div>
 
             <div id="invalid_name" class="input_popup_error">
@@ -155,9 +155,12 @@
             </div>
 
             <div class="info_popup_text">
-                The RPI Korok Hunt is a campus wide Korok hunting event! <br>
+                The RPI Korok Hunt is a campus-wide Korok hunting event! <br>
                 Search across RPI for hidden Koroks! Scan their QR codes in order to increment your score.
-                and compete against other RPI students to find the most! <br><br>
+                Compete against other RPI students to find the most!<br>
+            </div>
+
+            <div class="info_popup_text top_text_padding">
                 The top three players by the end of <u>November 24, 2024</u> will win 
                 <u><a target="_blank" rel="noopener noreferrer"href="https://joshschnauber.com/korok_hunt/img/prize">a korok plush</a></u>!
             </div>
