--- a/korok_hunt/leaderboard/index.html
+++ b/korok_hunt/leaderboard/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 
+<meta name="theme-color" content="#E28C3F"/>
+
 <html lang="en">
 <head>
     <title> RPI Korok Hunt - Leaderboard </title>
