Fixed issue with the wrong korok image appearing

--- a/korok_hunt/index.html
+++ b/korok_hunt/index.html
@@ -15,7 +15,7 @@
         <!-- MAIN PAGE -->
         <div class="top_container">
             <div class="logo_container">
-                <a href="https://joshschnauber.com/korok_hunt/">
+                <a href="/korok_hunt/">
                 <img src="/korok_hunt/img/korok_hunt_logo.png" alt="Korok Hunt Logo">
                 </a>
             </div>
@@ -39,7 +39,7 @@
                 Don't go searching anywhere you shouldn't be; we probably didn't place any Koroks there :)
                 <br><br>
                 The top three players by the end of <u>November 24, 2024</u> will win 
-                <u><a target="_blank" rel="noopener noreferrer"href="https://joshschnauber.com/korok_hunt/img/prize">a korok plush</a></u>!
+                <u><a target="_blank" rel="noopener noreferrer"href="/korok_hunt/img/top_3_prize.png">a korok plush</a></u>!
                 <br>
                 The first place winner will maybe also get something extra. I don't know, I haven't thought of it yet.
                 <br><br>
@@ -48,7 +48,7 @@
         <br><br><br><br>
         
         <div id="leaderboard_button" class="leaderboard_button">
-            <a href="https://joshschnauber.com/korok_hunt/leaderboard/" class="center">
+            <a href="/korok_hunt/leaderboard/" class="center">
             <img src="/korok_hunt/img/leaderboard_button.png" alt="View leaderboard">
             </a>
         </div>
@@ -166,7 +166,7 @@
 
             <div class="info_popup_text top_text_padding">
                 The top three players by the end of <u>November 24, 2024</u> will win 
-                <u><a target="_blank" rel="noopener noreferrer"href="https://joshschnauber.com/korok_hunt/img/prize">a korok plush</a></u>!
+                <u><a target="_blank" rel="noopener noreferrer"href="/korok_hunt/img/prize">a korok plush</a></u>!
             </div>
 
             <div class="popup_button_container">
