--- a/korok_hunt/leaderboard/index.html
+++ b/korok_hunt/leaderboard/index.html
@@ -15,7 +15,7 @@
         <!-- MAIN PAGE -->
         <div class="top_container">
             <div class="logo_container">
-                <a href="https://joshschnauber.com/korok_hunt/">
+                <a href="/korok_hunt/">
                 <img src="/korok_hunt/img/korok_hunt_logo.png" alt="Korok Hunt Logo">
                 </a>
             </div>
