Added discord link

--- a/korok_hunt/index.html
+++ b/korok_hunt/index.html
@@ -41,6 +41,9 @@
                 The top three players by the end of <u>October 27, 2024</u> will win 
                 <u><a target="_blank" rel="noopener noreferrer"href="/korok_hunt/img/top_3_prize.png">a korok plush</a></u>!
                 <br><br>
+                We also now have a
+                <u><a target="_blank" rel="noopener noreferrer"href="https://discord.gg/A79Au6BcsJ">discord channel</a></u>!
+                <br><br>
             </div>
         </div>
         <br><br><br><br>
