Added display for Korok number

--- a/korok_hunt/index.html
+++ b/korok_hunt/index.html
@@ -42,7 +42,7 @@
                 <u><a target="_blank" rel="noopener noreferrer"href="/korok_hunt/img/top_3_prize.png">a korok plush</a></u>!
                 <br><br>
                 We also now have a
-                <u><a target="_blank" rel="noopener noreferrer"href="https://discord.gg/A79Au6BcsJ">discord channel</a></u>!
+                <u><a target="_blank" rel="noopener noreferrer"href="https://discord.gg/A79Au6BcsJ">discord server</a></u>!
                 <br><br>
             </div>
         </div>
@@ -82,8 +82,11 @@
 
         <!-- KOROK FOUND POPUP -->
         <div id="kf_popup" class="align_popup info_popup">
-            
-            <img id="korok_img" alt="Yahaha! You found me!" class="center">
+
+            <div class="korok_image_div">
+                <korok_number class="korok_popup_text upper_right_float_text">#000</korok_number>
+                <img id="korok_img" alt="Yahaha! You found me!" class="center" src="img/koroks/k_0.png">
+            </div>
             
             <div class="korok_popup_text">
                 <div>
