Added SEO stuff

--- a/korok_hunt/index.html
+++ b/korok_hunt/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 
-<meta name="theme-color" content="#E28C3F"/>
-
 <html id="html" lang="en">
 <head>
     <title> RPI Korok Hunt </title>
+    <meta name="description" content="The RPI Korok Hunt is a campus-wide scavenger hunt! Scan hidden QR codes to collect Koroks and increment your score!"/>
+    <meta charset="UTF-8">
 
     <link rel="stylesheet" href="/korok_hunt/css/main.css">
     <link rel="icon" type="image/x-icon" href="/korok_hunt/favicon.ico">
-</head>
+    <meta name="theme-color" content="#E28C3F"/>
 
+    <link rel="canonical" href="https://joshschnauber.com/korok_hunt/" />
+    <meta property="og:title" content="The RPI Korok Hunt" />
+    <meta property="og:description" content="Find Koroks hidden across campus in the RPI Korok Hunt!"/>
+    <meta property="og:image" content="/korok_hunt/img/korok_hunt_logo.png"/>
+</head>
 
 <body id="body">
         <!-- MAIN PAGE -->
@@ -85,7 +90,7 @@
 
             <div class="korok_image_div">
                 <korok_number class="korok_popup_text upper_right_float_text">#000</korok_number>
-                <img id="korok_img" alt="Yahaha! You found me!" class="center" src="img/koroks/k_0.png">
+                <img id="korok_img" src="/korok_hunt/img/unknown.svg" alt="Yahaha! You found me!" class="center">
             </div>
             
             <div class="korok_popup_text">
