--- a/korok_hunt/leaderboard/index.html
+++ b/korok_hunt/leaderboard/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 
-<meta name="theme-color" content="#E28C3F"/>
-
-<html lang="en">
+<html id="html" lang="en">
 <head>
     <title> RPI Korok Hunt - Leaderboard </title>
+    <meta name="description" content="View the leaderboard for the RPI Korok Hunt!"/>
+    <meta charset="UTF-8">
 
     <link rel="stylesheet" href="/korok_hunt/css/main.css">
     <link rel="icon" type="image/x-icon" href="/korok_hunt/favicon.ico">
-</head>
+    <meta name="theme-color" content="#E28C3F"/>
 
+    <link rel="canonical" href="https://joshschnauber.com/korok_hunt/leaderboard/" />
+    <meta property="og:title" content="The RPI Korok Hunt Leaderboard" />
+    <meta property="og:description" content="View the leaderboard for the RPI Korok Hunt!"/>
+    <meta property="og:image" content="/korok_hunt/img/korok_hunt_logo.png"/>
+</head>
 
 <body id="body">
         <!-- MAIN PAGE -->
