Updated for end of event

--- a/korok_hunt/index.html
+++ b/korok_hunt/index.html
@@ -46,7 +46,9 @@
                 The top three players by the end of <u>October 27, 2024</u> will win 
                 <u><a target="_blank" rel="noopener noreferrer"href="/korok_hunt/img/top_3_prize.png">a korok plush</a></u>!
                 <br><br>
-                We also now have a
+                The Korok Hunt is now over, but feel free to still search around for Koroks!
+                <br><br>
+                We also have a
                 <u><a target="_blank" rel="noopener noreferrer"href="https://discord.gg/A79Au6BcsJ">discord server</a></u>!
                 <br><br>
             </div>
@@ -156,7 +158,7 @@
 
             <div class="popup_button_container">
                 <button class="popup_button center">
-                    Create Account
+                    Create Account/Sign in
                 </button>
             </div>
         </div>
@@ -164,7 +166,7 @@
         <!-- INFO POPUP -->
         <div  id="i_popup" class="align_popup info_popup">
             <div class="popup_title_text center">
-                Introducing: <br><u> The RPI Korok Hunt! </u> <br>
+                The RPI Korok Hunt <br><u style="color: rgb(181,0,0);"> is now over </u> <br>
             </div>
 
             <div class="info_popup_text">
@@ -174,8 +176,7 @@
             </div>
 
             <div class="info_popup_text top_text_padding">
-                The top three players by the end of <u>October 27, 2024</u> will win 
-                <u><a target="_blank" rel="noopener noreferrer"href="/korok_hunt/img/prize">a korok plush</a></u>!
+                The Korok Hunt is over, but feel free to continue searching for Koroks!
             </div>
 
             <div class="popup_button_container">
